fixed problem with input getting stuck on dialog page

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -197,9 +197,8 @@ select-icon {
 }
 
 .ios .ion-list{
-  margin-top: 105px;
+  margin-top: 135px;
 }
-
 
 .online {
   top: 7px;
